[gd_scene load_steps=3 format=3 uid="uid://bf50puw5bv6fj"]

[ext_resource type="Script" path="res://scripts/base_classes/bullet.gd" id="1_ohjsv"]
[ext_resource type="PackedScene" uid="uid://ruylrq2f5lrw" path="res://scripts/effects/explosion.tscn" id="2_2bgjs"]

[node name="Bullet" type="Area2D"]
script = ExtResource("1_ohjsv")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Lifetime" type="Timer" parent="."]

[node name="Explosion" parent="." instance=ExtResource("2_2bgjs")]
visible = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
